# iword

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  iword-server-spec.md
.github/workflows/: ci.yml
bindings/go/: example_router.go  go.mod  iword.go  iword_test.go  iwordserver.go  iwordserver_test.go
bindings/node/: binding.gyp  index.js  iword.js  iword_napi.cc  iwordserver.js  package.json  test_basic.js  test_server.js
bindings/python/: README_pypi.md  example_langchain.py  example_rag.py  iword.py  pyproject.toml  test_basic.py  test_langchain_integration.py  test_server.py
bindings/python/iword/: __init__.py  server.py
dict/: README.md  profanity_en.txt  spam_en.txt
include/: iword.c
pecl/: iword.c  iword.h
tool/: Makefile  iword-grep.py  iwordctl.c  iwordd  iwordserver.c  iworduse.c
