[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iword"
version = "0.1.0"
description = "High-speed keyword search with shared memory — Python binding for iWord"
readme = "README_pypi.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["keyword-search", "shared-memory", "spam-filter", "content-moderation", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/0xkaz/iword"
Repository = "https://github.com/atfreaks/iword"
Issues = "https://github.com/atfreaks/iword/issues"

[tool.setuptools]
packages = ["iword"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
iword = ["py.typed"]
